work-in-progress

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ base_url: "../"
 <main class="app-page" id="content">
 
     <!-- About Section -->
-    <section id="about" class="app-section about-section">
-        <h1 class="app-heading"><i class="fa fa-info-circle"></i> About</h1>
+    <section id="agentur" class="app-section agentur-section">
+        <h1 class="app-heading"><i class="fa fa-info-circle"></i> Agentur</h1>
         <div class="app-content-left">
             <img class="app-img b-lazy"
                  src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
@@ -24,8 +24,8 @@ base_url: "../"
     </section>
 
     <!-- Hosting Section -->
-    <section id="hosting" class="app-section hosting-section">
-        <h1 class="app-heading"><i class="fa fa-rocket"></i> Hosting Pakete</h1>
+    <section id="leistungen" class="app-section leistungen-section">
+        <h1 class="app-heading"><i class="fa fa-rocket"></i> Unsere Leistungen</h1>
             <!-- Paket01 -->
             <div class="app-item">
                 <div class="app-content-left">
@@ -144,9 +144,9 @@ base_url: "../"
 
     </section>
 
-    <!-- Customers Section -->
-    <section id="customers" class="app-section customers-section">
-        <h1 class="app-heading"><i class="fa fa-users"></i> Customers</h1>
+    <!-- Projekte Section -->
+    <section id="projekte" class="app-section projekte-section">
+        <h1 class="app-heading"><i class="fa fa-users"></i> Projekte</h1>
         <div class="app-content-left">
             <h2>Jolly Roger</h2>
                 <img class="app-img b-lazy"
@@ -202,9 +202,9 @@ base_url: "../"
         </div>
     </section>
 
-    <!-- FAQ Section -->
-    <section id="faq" class="app-section faq-section">
-        <h1 class="app-heading"><i class="fa fa-pie-chart"></i> FAQ</h1>
+    <!-- Kunden Section -->
+    <section id="kunden" class="app-section kunden-section">
+        <h1 class="app-heading"><i class="fa fa-pie-chart"></i> Kunden</h1>
         <div class="app-content-left">
         <h2>Heading</h2>
             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
@@ -225,9 +225,9 @@ base_url: "../"
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="app-section contact-section">
-       <h1 class="app-heading"><i class="fa fa-paper-plane"></i> Contact Us</h1>
+    <!-- Kontakt Section -->
+    <section id="kontakt" class="app-section kontakt-section">
+       <h1 class="app-heading"><i class="fa fa-paper-plane"></i> Kontakt</h1>
 
         <h2>We're always happy to hear from you!</h2>
         
@@ -264,8 +264,8 @@ base_url: "../"
         <!-- End of Form -->
     </section>
 
-    <!-- About Impressum -->
-    <section id="imprint" class="app-section imprint-section">
+    <!-- Impressum Section -->
+    <section id="impressum" class="app-section impressum-section">
         <h1 class="app-heading"><i class="fa fa-info-circle"></i> Impressum</h1>
         <div class="app-content-left">
         <h2>Rechtliche Hinweise</h2>
