--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ base_url: "../"
     <!-- About Section -->
     <section id="agentur" class="app-section agentur-section">
         <h1 class="app-heading"><i class="fa fa-info-circle"></i> Agentur</h1>
+            <p class="app-subheading">Wir arbeiten schnell, zuverlässig, mit Spaß an der Sache und Liebe zur Gestaltung.</p>
         <div class="app-content-left">
             <img class="app-img b-lazy"
                  src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
@@ -17,7 +18,7 @@ base_url: "../"
                  alt="Ade25" />
         </div>
         <div class="app-content-right">
-            <h2>Long time evolution</h2>
+            <h2>Wir arbeiten schnell, zuverlässig, mit Spaß an der Sache und Liebe zur Gestaltung.</h2>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
                 <p>You will love it!</p>
         </div>
