--- a/index.html
+++ b/index.html
@@ -35,17 +35,33 @@ base_url: "../"
                  src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                  data-src="../assets/img/team/sd.png"
                  alt="Ade25" />
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+        <div class="app-team-social">
+        <ul>
+        <li><a href="https://twitter.com/SergeDavidov/"><i class="fa fa-twitter"></i></a></li> 
+        <li><a href="https://www.facebook.com/kreativkombinat"><i class="fa fa-facebook"></i></a></li> 
+        <li><a href="https://www.facebook.com/kreativkombinat"><i class="fa fa-facebook"></i></a></li> 
+        <li><a href="https://www.facebook.com/kreativkombinat"><i class="fa fa-facebook"></i></a></li>
+        </ul>
+        </div>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
         </div>
 
          <div class="app-content-left-fourth">
-         <h2>Eva Gallitzenförfer</h2>
+         <h2>Eva Gallitzendörfer</h2>
          <h3>Koordination &middot; PM &middot; Konzept &middot; Text</h3>
          <img class="app-img b-lazy"
                  src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                  data-src="../assets/img/team/eg.png"
                  alt="Ade25" />
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+        <div class="app-team-social">
+        <ul>
+        <li><a href="https://twitter.com/SergeDavidov/"><i class="fa fa-twitter"></i></a></li> 
+        <li><a href="https://www.facebook.com/kreativkombinat"><i class="fa fa-facebook"></i></a></li> 
+        <li><a href="https://www.facebook.com/kreativkombinat"><i class="fa fa-facebook"></i></a></li> 
+        <li><a href="https://www.facebook.com/kreativkombinat"><i class="fa fa-facebook"></i></a></li>
+        </ul>
+        </div>
+             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
         </div>
 
          <div class="app-content-left-fourth">
@@ -55,7 +71,15 @@ base_url: "../"
                  src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                  data-src="../assets/img/team/cb.png"
                  alt="Ade25" />
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+        <div class="app-team-social">
+        <ul>
+        <li><a href="https://twitter.com/SergeDavidov/"><i class="fa fa-twitter"></i></a></li> 
+        <li><a href="https://www.facebook.com/kreativkombinat"><i class="fa fa-facebook"></i></a></li> 
+        <li><a href="https://www.facebook.com/kreativkombinat"><i class="fa fa-facebook"></i></a></li> 
+        <li><a href="https://www.facebook.com/kreativkombinat"><i class="fa fa-facebook"></i></a></li>
+        </ul>
+        </div>
+             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
         </div>
         
 
@@ -66,7 +90,15 @@ base_url: "../"
                  src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                  data-src="../assets/img/team/ed.png"
                  alt="Ade25" />
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+        <div class="app-team-social">
+        <ul>
+        <li><a href="https://twitter.com/SergeDavidov/"><i class="fa fa-twitter"></i></a></li> 
+        <li><a href="https://www.facebook.com/kreativkombinat"><i class="fa fa-facebook"></i></a></li> 
+        <li><a href="https://www.facebook.com/kreativkombinat"><i class="fa fa-facebook"></i></a></li> 
+        <li><a href="https://www.facebook.com/kreativkombinat"><i class="fa fa-facebook"></i></a></li>
+        </ul>
+        </div>
+             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
         </div>
         </div>
 
