--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@ base_url: "../"
 
     <!-- About Section -->
     {% include about.html %}
+    {% include team.html %}
+    {% include carousel.html %}
     <!-- Productivity Section -->
     {% include productivity.html %}
     <!-- Projects Section -->
